--- a/docs/BenchmarkingDelayedMatrixStats.tex
+++ b/docs/BenchmarkingDelayedMatrixStats.tex
@@ -124,7 +124,7 @@
   \postauthor{\par}
   \predate{\centering\large\emph}
   \postdate{\par}
-  \date{2017-06-04}
+  \date{2017-06-09}
 
 \usepackage{booktabs}
 \usepackage{amsthm}
@@ -229,7 +229,7 @@ The R session information when compiling this book is shown below:
 \CommentTok{#>  language (EN)                        }
 \CommentTok{#>  collate  en_AU.UTF-8                 }
 \CommentTok{#>  tz       America/New_York            }
-\CommentTok{#>  date     2017-06-04                  }
+\CommentTok{#>  date     2017-06-09                  }
 \CommentTok{#> }
 \CommentTok{#>  package            * version    date      }
 \CommentTok{#>  backports            1.1.0      2017-05-22}
@@ -240,8 +240,8 @@ The R session information when compiling this book is shown below:
 \CommentTok{#>  colorspace           1.3-2      2016-12-14}
 \CommentTok{#>  compiler             3.4.0      2017-04-21}
 \CommentTok{#>  datasets           * 3.4.0      2017-04-21}
-\CommentTok{#>  DelayedArray       * 0.3.8      2017-06-02}
-\CommentTok{#>  DelayedMatrixStats * 0.0.0.9000 2017-05-28}
+\CommentTok{#>  DelayedArray       * 0.3.9      2017-06-03}
+\CommentTok{#>  DelayedMatrixStats * 0.0.0.9000 2017-06-09}
 \CommentTok{#>  devtools             1.13.2     2017-06-02}
 \CommentTok{#>  digest               0.6.12     2017-01-27}
 \CommentTok{#>  evaluate             0.10       2016-10-11}
@@ -273,7 +273,7 @@ The R session information when compiling this book is shown below:
 \CommentTok{#>  rmarkdown            1.5        2017-04-26}
 \CommentTok{#>  rprojroot            1.2        2017-01-16}
 \CommentTok{#>  rstudioapi           0.6        2016-06-27}
-\CommentTok{#>  S4Vectors          * 0.15.2     2017-05-11}
+\CommentTok{#>  S4Vectors          * 0.15.3     2017-06-03}
 \CommentTok{#>  scales               0.4.1      2016-11-09}
 \CommentTok{#>  stats              * 3.4.0      2017-04-21}
 \CommentTok{#>  stats4             * 3.4.0      2017-04-21}
@@ -327,7 +327,7 @@ The R session information when compiling this book is shown below:
 \CommentTok{#>  CRAN (R 3.4.0)                   }
 \CommentTok{#>  CRAN (R 3.4.0)                   }
 \CommentTok{#>  CRAN (R 3.4.0)                   }
-\CommentTok{#>  cran (@0.15.2)                   }
+\CommentTok{#>  Bioconductor                     }
 \CommentTok{#>  CRAN (R 3.4.0)                   }
 \CommentTok{#>  local                            }
 \CommentTok{#>  local                            }
@@ -372,18 +372,18 @@ package using different types of matrix-like data:
                                   \DataTypeTok{ncol =} \DecValTok{600}\NormalTok{))}
 \NormalTok{dense_matrix}
 \CommentTok{#> DelayedMatrix object of 20000 x 600 doubles:}
-\CommentTok{#>                [,1]       [,2]       [,3] ...     [,599]     [,600]}
-\CommentTok{#>     [1,] 0.56211049 0.06052366 0.38033128   . 0.87799385 0.84693600}
-\CommentTok{#>     [2,] 0.96372515 0.83906637 0.62496370   . 0.87406395 0.06190513}
-\CommentTok{#>     [3,] 0.18319063 0.81058923 0.63978155   . 0.73985395 0.30726775}
-\CommentTok{#>     [4,] 0.67745600 0.75232175 0.34283933   . 0.19136272 0.37044424}
-\CommentTok{#>     [5,] 0.82650284 0.29491392 0.09360019   . 0.86290053 0.63351816}
-\CommentTok{#>      ...          .          .          .   .          .          .}
-\CommentTok{#> [19996,] 0.94517978 0.95109336 0.88648460   . 0.07201023 0.48243563}
-\CommentTok{#> [19997,] 0.99308461 0.85953562 0.78748557   . 0.17937134 0.31886901}
-\CommentTok{#> [19998,] 0.55040209 0.64421003 0.02668481   . 0.77054324 0.27607450}
-\CommentTok{#> [19999,] 0.97592622 0.48989835 0.79181370   . 0.22407128 0.64161406}
-\CommentTok{#> [20000,] 0.63496789 0.44949889 0.77485783   . 0.23457757 0.10117268}
+\CommentTok{#>                 [,1]        [,2]        [,3] ...     [,599]     [,600]}
+\CommentTok{#>     [1,] 0.291123149 0.746567243 0.714732255   . 0.75857413 0.64889705}
+\CommentTok{#>     [2,] 0.695032771 0.835652019 0.994773283   . 0.57136535 0.59089245}
+\CommentTok{#>     [3,] 0.376537710 0.076370680 0.631883153   . 0.08632942 0.64604683}
+\CommentTok{#>     [4,] 0.099155580 0.983260972 0.033870884   . 0.17194848 0.78613336}
+\CommentTok{#>     [5,] 0.223655179 0.003016347 0.184510716   . 0.32769976 0.98399021}
+\CommentTok{#>      ...           .           .           .   .          .          .}
+\CommentTok{#> [19996,]  0.19562940  0.64344791  0.34820057   .  0.2382142  0.5758769}
+\CommentTok{#> [19997,]  0.50863128  0.38698444  0.34155233   .  0.5391943  0.2431121}
+\CommentTok{#> [19998,]  0.85569166  0.31043662  0.78594727   .  0.7177261  0.8931934}
+\CommentTok{#> [19999,]  0.90838796  0.04155858  0.36675316   .  0.5686322  0.3579163}
+\CommentTok{#> [20000,]  0.21878846  0.74873281  0.99661168   .  0.7821497  0.5828003}
 
 \CommentTok{# 60% zero elements}
 \NormalTok{sparse_matrix <-}\StringTok{ }\KeywordTok{seed}\NormalTok{(dense_matrix)}
@@ -392,18 +392,18 @@ package using different types of matrix-like data:
 \NormalTok{sparse_matrix <-}\StringTok{ }\KeywordTok{DelayedArray}\NormalTok{(Matrix}\OperatorTok{::}\KeywordTok{Matrix}\NormalTok{(sparse_matrix, }\DataTypeTok{sparse =} \OtherTok{TRUE}\NormalTok{))}
 \NormalTok{sparse_matrix}
 \CommentTok{#> DelayedMatrix object of 20000 x 600 doubles:}
-\CommentTok{#>                [,1]       [,2]       [,3] ...     [,599]     [,600]}
-\CommentTok{#>     [1,] 0.00000000 0.06052366 0.00000000   .  0.0000000  0.0000000}
-\CommentTok{#>     [2,] 0.00000000 0.83906637 0.62496370   .  0.0000000  0.0000000}
-\CommentTok{#>     [3,] 0.18319063 0.81058923 0.63978155   .  0.7398540  0.0000000}
-\CommentTok{#>     [4,] 0.67745600 0.00000000 0.34283933   .  0.1913627  0.3704442}
-\CommentTok{#>     [5,] 0.00000000 0.29491392 0.00000000   .  0.8629005  0.0000000}
-\CommentTok{#>      ...          .          .          .   .          .          .}
-\CommentTok{#> [19996,]  0.9451798  0.0000000  0.0000000   . 0.07201023 0.00000000}
-\CommentTok{#> [19997,]  0.0000000  0.0000000  0.0000000   . 0.00000000 0.00000000}
-\CommentTok{#> [19998,]  0.5504021  0.0000000  0.0000000   . 0.00000000 0.27607450}
-\CommentTok{#> [19999,]  0.0000000  0.0000000  0.0000000   . 0.22407128 0.64161406}
-\CommentTok{#> [20000,]  0.6349679  0.0000000  0.0000000   . 0.00000000 0.00000000}
+\CommentTok{#>                 [,1]        [,2]        [,3] ...    [,599]    [,600]}
+\CommentTok{#>     [1,] 0.000000000 0.000000000 0.000000000   . 0.7585741 0.6488971}
+\CommentTok{#>     [2,] 0.695032771 0.835652019 0.000000000   . 0.0000000 0.0000000}
+\CommentTok{#>     [3,] 0.376537710 0.076370680 0.631883153   . 0.0000000 0.6460468}
+\CommentTok{#>     [4,] 0.099155580 0.983260972 0.000000000   . 0.0000000 0.0000000}
+\CommentTok{#>     [5,] 0.223655179 0.003016347 0.000000000   . 0.0000000 0.0000000}
+\CommentTok{#>      ...           .           .           .   .         .         .}
+\CommentTok{#> [19996,]  0.19562940  0.64344791  0.00000000   . 0.0000000 0.0000000}
+\CommentTok{#> [19997,]  0.00000000  0.00000000  0.34155233   . 0.0000000 0.2431121}
+\CommentTok{#> [19998,]  0.00000000  0.31043662  0.00000000   . 0.7177261 0.8931934}
+\CommentTok{#> [19999,]  0.00000000  0.04155858  0.36675316   . 0.5686322 0.0000000}
+\CommentTok{#> [20000,]  0.00000000  0.00000000  0.99661168   . 0.0000000 0.5828003}
 
 \CommentTok{# HDF5-backed dense matrix}
 \CommentTok{# hdf5_matrix <- as(dense_matrix, "HDF5Array")}
@@ -414,17 +414,17 @@ package using different types of matrix-like data:
 \NormalTok{rle_matrix}
 \CommentTok{#> RleMatrix object of 2000000 x 6 integers:}
 \CommentTok{#>            [,1] [,2] [,3] [,4] [,5] [,6]}
-\CommentTok{#>       [1,]    2    1    2    2    1    1}
-\CommentTok{#>       [2,]    2    1    2    2    1    1}
-\CommentTok{#>       [3,]    2    1    2    2    1    1}
-\CommentTok{#>       [4,]    2    1    2    2    1    1}
-\CommentTok{#>       [5,]    2    1    2    2    1    1}
+\CommentTok{#>       [1,]    2    2    2    2    1    1}
+\CommentTok{#>       [2,]    2    2    2    2    1    1}
+\CommentTok{#>       [3,]    2    2    2    2    1    1}
+\CommentTok{#>       [4,]    2    2    2    2    1    1}
+\CommentTok{#>       [5,]    2    2    2    2    1    1}
 \CommentTok{#>        ...    .    .    .    .    .    .}
-\CommentTok{#> [1999996,]    1    1    1    1    1    2}
-\CommentTok{#> [1999997,]    1    1    1    1    1    2}
-\CommentTok{#> [1999998,]    1    1    1    1    1    2}
-\CommentTok{#> [1999999,]    1    1    1    1    1    2}
-\CommentTok{#> [2000000,]    1    1    1    1    1    2}
+\CommentTok{#> [1999996,]    1    2    1    2    2    2}
+\CommentTok{#> [1999997,]    1    2    1    2    2    2}
+\CommentTok{#> [1999998,]    1    2    1    2    2    2}
+\CommentTok{#> [1999999,]    1    2    1    2    2    2}
+\CommentTok{#> [2000000,]    1    2    1    2    2    2}
 \end{Highlighting}
 \end{Shaded}
 
@@ -453,11 +453,11 @@ package.
 We compare the \texttt{DelayedArray::colSums()} method, which uses the
 block-processing algorithm, to the
 \texttt{DelayedMatrixStats::colSums2()} method, which uses tailored
-algorithms depending on the \emph{seed} of the \emph{DelayedMatrix} and
-to the \texttt{DelayedMatrixStats:::.colSums2()} method that acts
-directly on the seed of the \emph{DelayedMatrix} object\footnote{\texttt{DelayedMatrixStats:::.colSums2()}
-  shouldn't be called by the user because it does not realise delayed
-  operations. It is used here for demonstration purposes on a
+algorithms depending on the \emph{seed} of the \emph{DelayedMatrix}, as
+well as comparing to the \texttt{colSums2()} method that acts directly
+on the seed of the \emph{DelayedMatrix} object\footnote{The `seed
+  method' shouldn't be called by the user because it does not realise
+  delayed operations. It is used here for demonstration purposes on a
   ``\emph{pristine}'' DelayedMatrix to measure the additional overhead
   of S4 methods}
 
@@ -468,17 +468,20 @@ directly on the seed of the \emph{DelayedMatrix} object\footnote{\texttt{Delayed
 \begin{Highlighting}[]
 \KeywordTok{microbenchmark}\NormalTok{(DelayedArray}\OperatorTok{::}\KeywordTok{colSums}\NormalTok{(dense_matrix),}
 \NormalTok{               DelayedMatrixStats}\OperatorTok{::}\KeywordTok{colSums2}\NormalTok{(dense_matrix),}
-\NormalTok{               DelayedMatrixStats}\OperatorTok{:::}\KeywordTok{.colSums2}\NormalTok{(}\KeywordTok{seed}\NormalTok{(dense_matrix)),}
+\NormalTok{               DelayedMatrixStats}\OperatorTok{::}\KeywordTok{colSums2}\NormalTok{(}\KeywordTok{seed}\NormalTok{(dense_matrix)),}
+\NormalTok{               matrixStats}\OperatorTok{::}\KeywordTok{colSums2}\NormalTok{(}\KeywordTok{seed}\NormalTok{(dense_matrix)),}
                \DataTypeTok{times =}\NormalTok{ times)}
 \CommentTok{#> Unit: milliseconds}
-\CommentTok{#>                                                expr        min         lq}
-\CommentTok{#>                 DelayedArray::colSums(dense_matrix) 1237.05967 1286.72366}
-\CommentTok{#>          DelayedMatrixStats::colSums2(dense_matrix)   13.75110   14.48974}
-\CommentTok{#>  DelayedMatrixStats:::.colSums2(seed(dense_matrix))   12.24977   12.52132}
+\CommentTok{#>                                              expr        min         lq}
+\CommentTok{#>               DelayedArray::colSums(dense_matrix) 1283.48911 1864.31577}
+\CommentTok{#>        DelayedMatrixStats::colSums2(dense_matrix)   17.29489   21.24989}
+\CommentTok{#>  DelayedMatrixStats::colSums2(seed(dense_matrix))   13.60255   17.87302}
+\CommentTok{#>         matrixStats::colSums2(seed(dense_matrix))   12.99146   15.80239}
 \CommentTok{#>        mean     median         uq        max neval}
-\CommentTok{#>  1338.77309 1313.47916 1425.51354 1472.51304    10}
-\CommentTok{#>    15.43412   14.89400   16.46142   19.15365    10}
-\CommentTok{#>    13.46753   12.83785   13.45714   17.22766    10}
+\CommentTok{#>  2004.46189 2048.45751 2301.36485 2521.58140    10}
+\CommentTok{#>    38.08371   36.05451   47.70144   73.72097    10}
+\CommentTok{#>    25.94223   24.00078   30.68420   41.72278    10}
+\CommentTok{#>    21.81281   17.31656   28.85252   33.48672    10}
 \KeywordTok{total}\NormalTok{(}\KeywordTok{profmem}\NormalTok{(DelayedArray}\OperatorTok{::}\KeywordTok{colSums}\NormalTok{(dense_matrix)))}
 \CommentTok{#> [1] 2498171088}
 \KeywordTok{total}\NormalTok{(}\KeywordTok{profmem}\NormalTok{(DelayedMatrixStats}\OperatorTok{::}\KeywordTok{colSums2}\NormalTok{(dense_matrix)))}
@@ -486,20 +489,20 @@ directly on the seed of the \emph{DelayedMatrix} object\footnote{\texttt{Delayed
 
 \KeywordTok{microbenchmark}\NormalTok{(DelayedArray}\OperatorTok{::}\KeywordTok{colSums}\NormalTok{(sparse_matrix),}
 \NormalTok{               DelayedMatrixStats}\OperatorTok{::}\KeywordTok{colSums2}\NormalTok{(sparse_matrix),}
-\NormalTok{               DelayedMatrixStats}\OperatorTok{:::}\KeywordTok{.colSums2}\NormalTok{(}\KeywordTok{seed}\NormalTok{(sparse_matrix)),}
+\NormalTok{               DelayedMatrixStats}\OperatorTok{::}\KeywordTok{colSums2}\NormalTok{(}\KeywordTok{seed}\NormalTok{(sparse_matrix)),}
 \NormalTok{               Matrix}\OperatorTok{::}\KeywordTok{colSums}\NormalTok{(}\KeywordTok{seed}\NormalTok{(sparse_matrix)), }
                \DataTypeTok{times =}\NormalTok{ times)}
 \CommentTok{#> Unit: milliseconds}
-\CommentTok{#>                                                 expr         min}
-\CommentTok{#>                 DelayedArray::colSums(sparse_matrix) 1263.948627}
-\CommentTok{#>          DelayedMatrixStats::colSums2(sparse_matrix)   11.125717}
-\CommentTok{#>  DelayedMatrixStats:::.colSums2(seed(sparse_matrix))    9.694688}
-\CommentTok{#>                 Matrix::colSums(seed(sparse_matrix))    9.831111}
-\CommentTok{#>           lq       mean     median         uq        max neval}
-\CommentTok{#>  1277.792760 1354.97051 1345.26165 1409.33254 1478.01487    10}
-\CommentTok{#>    11.321978   13.61341   12.38058   14.26526   24.21124    10}
-\CommentTok{#>     9.737193   11.27165   10.42035   11.44131   15.96811    10}
-\CommentTok{#>    10.428975   11.36380   10.85824   12.76856   13.00290    10}
+\CommentTok{#>                                               expr         min         lq}
+\CommentTok{#>               DelayedArray::colSums(sparse_matrix) 1264.530744 1316.15718}
+\CommentTok{#>        DelayedMatrixStats::colSums2(sparse_matrix)   11.817381   13.42313}
+\CommentTok{#>  DelayedMatrixStats::colSums2(seed(sparse_matrix))   10.175122   11.20796}
+\CommentTok{#>               Matrix::colSums(seed(sparse_matrix))    9.694093   11.23716}
+\CommentTok{#>        mean     median         uq        max neval}
+\CommentTok{#>  1452.48860 1386.43823 1524.39434 1853.55755    10}
+\CommentTok{#>    14.41638   13.99009   15.73583   17.47814    10}
+\CommentTok{#>    13.53717   12.41742   14.05605   21.09214    10}
+\CommentTok{#>    11.71826   11.74576   12.26451   13.80694    10}
 \KeywordTok{total}\NormalTok{(}\KeywordTok{profmem}\NormalTok{(DelayedArray}\OperatorTok{::}\KeywordTok{colSums}\NormalTok{(sparse_matrix)))}
 \CommentTok{#> [1] 1709267496}
 \KeywordTok{total}\NormalTok{(}\KeywordTok{profmem}\NormalTok{(DelayedMatrixStats}\OperatorTok{::}\KeywordTok{colSums2}\NormalTok{(sparse_matrix)))}
@@ -507,20 +510,20 @@ directly on the seed of the \emph{DelayedMatrix} object\footnote{\texttt{Delayed
 
 \KeywordTok{microbenchmark}\NormalTok{(DelayedArray}\OperatorTok{::}\KeywordTok{colSums}\NormalTok{(rle_matrix),}
 \NormalTok{               DelayedMatrixStats}\OperatorTok{::}\KeywordTok{colSums2}\NormalTok{(rle_matrix),}
-\NormalTok{               DelayedMatrixStats}\OperatorTok{:::}\KeywordTok{.colSums2}\NormalTok{(}\KeywordTok{seed}\NormalTok{(rle_matrix)), }
+\NormalTok{               DelayedMatrixStats}\OperatorTok{::}\KeywordTok{colSums2}\NormalTok{(}\KeywordTok{seed}\NormalTok{(rle_matrix)), }
                \DataTypeTok{times =}\NormalTok{ times)}
 \CommentTok{#> Unit: milliseconds}
-\CommentTok{#>                                              expr         min          lq}
-\CommentTok{#>                 DelayedArray::colSums(rle_matrix) 2480.267737 2522.151174}
-\CommentTok{#>          DelayedMatrixStats::colSums2(rle_matrix)    3.846588    4.031420}
-\CommentTok{#>  DelayedMatrixStats:::.colSums2(seed(rle_matrix))    2.660000    2.794059}
+\CommentTok{#>                                            expr         min          lq}
+\CommentTok{#>               DelayedArray::colSums(rle_matrix) 1310.023207 1355.152398}
+\CommentTok{#>        DelayedMatrixStats::colSums2(rle_matrix)    4.044929    4.127730}
+\CommentTok{#>  DelayedMatrixStats::colSums2(seed(rle_matrix))    2.654707    2.824271}
 \CommentTok{#>         mean      median          uq         max neval}
-\CommentTok{#>  2564.381064 2555.504718 2616.171735 2646.783855    10}
-\CommentTok{#>     4.632065    4.457076    4.814034    6.303599    10}
-\CommentTok{#>     7.772226    3.021242    3.113427   50.727535    10}
+\CommentTok{#>  1406.699029 1417.552379 1430.568801 1561.240497    10}
+\CommentTok{#>     6.835946    4.509377    8.610080   15.512422    10}
+\CommentTok{#>     3.166907    3.067424    3.324333    4.297344    10}
 
 \KeywordTok{total}\NormalTok{(}\KeywordTok{profmem}\NormalTok{(DelayedArray}\OperatorTok{::}\KeywordTok{colSums}\NormalTok{(rle_matrix)))}
-\CommentTok{#> [1] 787403608}
+\CommentTok{#> [1] 594934472}
 \KeywordTok{total}\NormalTok{(}\KeywordTok{profmem}\NormalTok{(DelayedMatrixStats}\OperatorTok{::}\KeywordTok{colSums2}\NormalTok{(rle_matrix)))}
 \CommentTok{#> [1] 1872}
 \end{Highlighting}
@@ -536,11 +539,11 @@ directly on the seed of the \emph{DelayedMatrix} object\footnote{\texttt{Delayed
                \DataTypeTok{times =}\NormalTok{ times)}
 \CommentTok{#> Unit: milliseconds}
 \CommentTok{#>                                                  expr       min        lq}
-\CommentTok{#>              DelayedArray::colSums(dense_matrix[i, ]) 150.12124 177.85944}
-\CommentTok{#>  DelayedMatrixStats::colSums2(dense_matrix, rows = i)  14.09315  14.59356}
-\CommentTok{#>       mean    median        uq       max neval}
-\CommentTok{#>  198.11233 192.73521 226.85481 240.19939    10}
-\CommentTok{#>   15.12774  14.92626  15.38786  17.04865    10}
+\CommentTok{#>              DelayedArray::colSums(dense_matrix[i, ]) 232.66977 269.30946}
+\CommentTok{#>  DelayedMatrixStats::colSums2(dense_matrix, rows = i)  17.61365  17.94966}
+\CommentTok{#>      mean    median        uq        max neval}
+\CommentTok{#>  398.3456 322.16767 402.06056 1075.46715    10}
+\CommentTok{#>   23.7913  23.64738  28.12027   31.48741    10}
 \KeywordTok{total}\NormalTok{(}\KeywordTok{profmem}\NormalTok{(DelayedArray}\OperatorTok{::}\KeywordTok{colSums}\NormalTok{(dense_matrix[i, ])))}
 \CommentTok{#> [1] 326614368}
 \KeywordTok{total}\NormalTok{(}\KeywordTok{profmem}\NormalTok{(DelayedMatrixStats}\OperatorTok{::}\KeywordTok{colSums2}\NormalTok{(dense_matrix, }\DataTypeTok{rows =}\NormalTok{ i)))}
@@ -550,30 +553,30 @@ directly on the seed of the \emph{DelayedMatrix} object\footnote{\texttt{Delayed
 \NormalTok{               DelayedMatrixStats}\OperatorTok{::}\KeywordTok{colSums2}\NormalTok{(sparse_matrix, }\DataTypeTok{rows =}\NormalTok{ i),}
                \DataTypeTok{times =}\NormalTok{ times)}
 \CommentTok{#> Unit: milliseconds}
-\CommentTok{#>                                                   expr      min       lq}
-\CommentTok{#>              DelayedArray::colSums(sparse_matrix[i, ]) 181.0150 185.5543}
-\CommentTok{#>  DelayedMatrixStats::colSums2(sparse_matrix, rows = i)  43.4571  46.1228}
-\CommentTok{#>       mean    median        uq       max neval}
-\CommentTok{#>  241.06562 214.46952 260.04889 403.65730    10}
-\CommentTok{#>   47.23405  47.07576  48.33854  51.88142    10}
+\CommentTok{#>                                                   expr       min        lq}
+\CommentTok{#>              DelayedArray::colSums(sparse_matrix[i, ]) 180.50731 216.85644}
+\CommentTok{#>  DelayedMatrixStats::colSums2(sparse_matrix, rows = i)  45.46621  51.43771}
+\CommentTok{#>       mean    median        uq      max neval}
+\CommentTok{#>  308.51542 254.18478 440.75724 513.4355    10}
+\CommentTok{#>   72.10438  53.29957  70.54412 148.0876    10}
 \KeywordTok{total}\NormalTok{(}\KeywordTok{profmem}\NormalTok{(DelayedArray}\OperatorTok{::}\KeywordTok{colSums}\NormalTok{(sparse_matrix[i, ])))}
-\CommentTok{#> [1] 217297184}
+\CommentTok{#> [1] 217293464}
 \KeywordTok{total}\NormalTok{(}\KeywordTok{profmem}\NormalTok{(DelayedMatrixStats}\OperatorTok{::}\KeywordTok{colSums2}\NormalTok{(sparse_matrix, }\DataTypeTok{rows =}\NormalTok{ i)))}
-\CommentTok{#> [1] 5805384}
+\CommentTok{#> [1] 5801656}
 
 \NormalTok{i <-}\StringTok{ }\KeywordTok{sample}\NormalTok{(}\KeywordTok{nrow}\NormalTok{(rle_matrix), }\KeywordTok{nrow}\NormalTok{(rle_matrix) }\OperatorTok{/}\StringTok{ }\DecValTok{10}\NormalTok{)}
 \KeywordTok{microbenchmark}\NormalTok{(DelayedArray}\OperatorTok{::}\KeywordTok{colSums}\NormalTok{(rle_matrix[i, ]),}
 \NormalTok{               DelayedMatrixStats}\OperatorTok{::}\KeywordTok{colSums2}\NormalTok{(rle_matrix, }\DataTypeTok{rows =}\NormalTok{ i),}
                \DataTypeTok{times =}\NormalTok{ times)}
 \CommentTok{#> Unit: milliseconds}
-\CommentTok{#>                                                expr       min       lq}
-\CommentTok{#>              DelayedArray::colSums(rle_matrix[i, ])  266.4322  282.946}
-\CommentTok{#>  DelayedMatrixStats::colSums2(rle_matrix, rows = i) 2509.9470 2536.812}
+\CommentTok{#>                                                expr       min        lq}
+\CommentTok{#>              DelayedArray::colSums(rle_matrix[i, ])  134.5513  145.7055}
+\CommentTok{#>  DelayedMatrixStats::colSums2(rle_matrix, rows = i) 2532.1597 2576.5126}
 \CommentTok{#>       mean    median        uq       max neval}
-\CommentTok{#>   288.4523  285.5148  287.8931  342.1545    10}
-\CommentTok{#>  2565.2083 2557.8006 2567.9954 2645.7166    10}
+\CommentTok{#>   175.0424  152.0624  193.1471  315.7631    10}
+\CommentTok{#>  2791.6364 2636.5898 2961.2963 3686.7874    10}
 \KeywordTok{total}\NormalTok{(}\KeywordTok{profmem}\NormalTok{(DelayedArray}\OperatorTok{::}\KeywordTok{colSums}\NormalTok{(rle_matrix[i, ])))}
-\CommentTok{#> [1] 86579640}
+\CommentTok{#> [1] 62582200}
 \KeywordTok{total}\NormalTok{(}\KeywordTok{profmem}\NormalTok{(DelayedMatrixStats}\OperatorTok{::}\KeywordTok{colSums2}\NormalTok{(rle_matrix, }\DataTypeTok{rows =}\NormalTok{ i)))}
 \CommentTok{#> [1] 99980704}
 \end{Highlighting}
@@ -589,11 +592,11 @@ directly on the seed of the \emph{DelayedMatrix} object\footnote{\texttt{Delayed
                \DataTypeTok{times =}\NormalTok{ times)}
 \CommentTok{#> Unit: milliseconds}
 \CommentTok{#>                                                  expr        min}
-\CommentTok{#>              DelayedArray::colSums(dense_matrix[, j]) 130.822413}
-\CommentTok{#>  DelayedMatrixStats::colSums2(dense_matrix, cols = j)   2.954383}
-\CommentTok{#>          lq       mean     median         uq        max neval}
-\CommentTok{#>  185.368641 192.741377 199.560679 204.350156 217.700374    10}
-\CommentTok{#>    3.031592   3.534314   3.402916   3.717595   5.269981    10}
+\CommentTok{#>              DelayedArray::colSums(dense_matrix[, j]) 158.172784}
+\CommentTok{#>  DelayedMatrixStats::colSums2(dense_matrix, cols = j)   3.507745}
+\CommentTok{#>          lq      mean     median         uq        max neval}
+\CommentTok{#>  160.532558 182.67404 163.364146 164.916947 314.841775    10}
+\CommentTok{#>    3.833441   4.50892   4.257297   4.693838   6.984677    10}
 \KeywordTok{total}\NormalTok{(}\KeywordTok{profmem}\NormalTok{(DelayedArray}\OperatorTok{::}\KeywordTok{colSums}\NormalTok{(dense_matrix[, j])))}
 \CommentTok{#> [1] 326835928}
 \KeywordTok{total}\NormalTok{(}\KeywordTok{profmem}\NormalTok{(DelayedMatrixStats}\OperatorTok{::}\KeywordTok{colSums2}\NormalTok{(dense_matrix, }\DataTypeTok{cols =}\NormalTok{ j)))}
@@ -603,30 +606,30 @@ directly on the seed of the \emph{DelayedMatrix} object\footnote{\texttt{Delayed
 \NormalTok{               DelayedMatrixStats}\OperatorTok{::}\KeywordTok{colSums2}\NormalTok{(sparse_matrix, }\DataTypeTok{cols =}\NormalTok{ j),}
                \DataTypeTok{times =}\NormalTok{ times)}
 \CommentTok{#> Unit: milliseconds}
-\CommentTok{#>                                                   expr       min        lq}
-\CommentTok{#>              DelayedArray::colSums(sparse_matrix[, j]) 145.41955 151.62413}
-\CommentTok{#>  DelayedMatrixStats::colSums2(sparse_matrix, cols = j)  12.24748  12.81168}
-\CommentTok{#>       mean    median        uq      max neval}
-\CommentTok{#>  187.63815 182.46718 222.64284 240.3814    10}
-\CommentTok{#>   25.01388  14.35228  14.91043 124.2795    10}
+\CommentTok{#>                                                   expr      min       lq}
+\CommentTok{#>              DelayedArray::colSums(sparse_matrix[, j]) 157.9222 183.6137}
+\CommentTok{#>  DelayedMatrixStats::colSums2(sparse_matrix, cols = j)  11.3190  13.4754}
+\CommentTok{#>       mean    median        uq       max neval}
+\CommentTok{#>  213.04790 193.51740 216.82503 330.93421    10}
+\CommentTok{#>   14.90289  15.52494  16.24069  17.78912    10}
 \KeywordTok{total}\NormalTok{(}\KeywordTok{profmem}\NormalTok{(DelayedArray}\OperatorTok{::}\KeywordTok{colSums}\NormalTok{(sparse_matrix[, j])))}
-\CommentTok{#> [1] 217156704}
+\CommentTok{#> [1] 217168584}
 \KeywordTok{total}\NormalTok{(}\KeywordTok{profmem}\NormalTok{(DelayedMatrixStats}\OperatorTok{::}\KeywordTok{colSums2}\NormalTok{(sparse_matrix, }\DataTypeTok{cols =}\NormalTok{ j)))}
-\CommentTok{#> [1] 5755072}
+\CommentTok{#> [1] 5766944}
 
 \NormalTok{j <-}\StringTok{ }\KeywordTok{sample}\NormalTok{(}\KeywordTok{ncol}\NormalTok{(rle_matrix), }\KeywordTok{ncol}\NormalTok{(rle_matrix) }\OperatorTok{/}\StringTok{ }\DecValTok{2}\NormalTok{)}
 \KeywordTok{microbenchmark}\NormalTok{(DelayedArray}\OperatorTok{::}\KeywordTok{colSums}\NormalTok{(rle_matrix[, j]),}
 \NormalTok{               DelayedMatrixStats}\OperatorTok{::}\KeywordTok{colSums2}\NormalTok{(rle_matrix, }\DataTypeTok{cols =}\NormalTok{ j),}
                \DataTypeTok{times =}\NormalTok{ times)}
 \CommentTok{#> Unit: milliseconds}
-\CommentTok{#>                                                expr         min         lq}
-\CommentTok{#>              DelayedArray::colSums(rle_matrix[, j]) 1204.439061 1265.87484}
-\CommentTok{#>  DelayedMatrixStats::colSums2(rle_matrix, cols = j)    3.645216    3.79055}
-\CommentTok{#>        mean      median         uq         max neval}
-\CommentTok{#>  1280.29217 1287.497136 1296.26175 1336.682742    10}
-\CommentTok{#>     4.20517    4.107648    4.52946    4.896633    10}
+\CommentTok{#>                                                expr       min         lq}
+\CommentTok{#>              DelayedArray::colSums(rle_matrix[, j]) 674.01695 692.114868}
+\CommentTok{#>  DelayedMatrixStats::colSums2(rle_matrix, cols = j)   3.81455   4.432296}
+\CommentTok{#>        mean     median         uq        max neval}
+\CommentTok{#>  737.488282 733.975966 766.304464 823.837522    10}
+\CommentTok{#>    4.888522   4.565458   4.685504   8.740521    10}
 \KeywordTok{total}\NormalTok{(}\KeywordTok{profmem}\NormalTok{(DelayedArray}\OperatorTok{::}\KeywordTok{colSums}\NormalTok{(rle_matrix[, j])))}
-\CommentTok{#> [1] 401705608}
+\CommentTok{#> [1] 305470160}
 \KeywordTok{total}\NormalTok{(}\KeywordTok{profmem}\NormalTok{(DelayedMatrixStats}\OperatorTok{::}\KeywordTok{colSums2}\NormalTok{(rle_matrix, }\DataTypeTok{cols =}\NormalTok{ j)))}
 \CommentTok{#> [1] 1872}
 \end{Highlighting}
@@ -644,21 +647,21 @@ subsetting}\label{with-row-and-column-subsetting}
                \DataTypeTok{times =}\NormalTok{ times)}
 \CommentTok{#> Unit: milliseconds}
 \CommentTok{#>                                                            expr       min}
-\CommentTok{#>                       DelayedArray::colSums(dense_matrix[i, j]) 38.678242}
-\CommentTok{#>  DelayedMatrixStats::colSums2(dense_matrix, rows = i, cols = j)  2.471122}
-\CommentTok{#>         lq      mean    median        uq        max neval}
-\CommentTok{#>  40.658299 63.969289 67.446417 71.177195 103.697163    10}
-\CommentTok{#>   2.514982  2.757317  2.719349  2.876589   3.446033    10}
+\CommentTok{#>                       DelayedArray::colSums(dense_matrix[i, j]) 36.368492}
+\CommentTok{#>  DelayedMatrixStats::colSums2(dense_matrix, rows = i, cols = j)  2.998825}
+\CommentTok{#>         lq      mean    median        uq       max neval}
+\CommentTok{#>  39.064818 58.958453 64.690798 71.119834 85.491278    10}
+\CommentTok{#>   3.029176  3.559399  3.125859  3.900654  5.987884    10}
 \KeywordTok{microbenchmark}\NormalTok{(DelayedArray}\OperatorTok{::}\KeywordTok{colSums}\NormalTok{(sparse_matrix[i, j]),}
 \NormalTok{               DelayedMatrixStats}\OperatorTok{::}\KeywordTok{colSums2}\NormalTok{(sparse_matrix, }\DataTypeTok{rows =}\NormalTok{ i, }\DataTypeTok{cols =}\NormalTok{ j),}
                \DataTypeTok{times =}\NormalTok{ times)}
 \CommentTok{#> Unit: milliseconds}
 \CommentTok{#>                                                             expr      min}
-\CommentTok{#>                       DelayedArray::colSums(sparse_matrix[i, j]) 58.16497}
-\CommentTok{#>  DelayedMatrixStats::colSums2(sparse_matrix, rows = i, cols = j) 44.19810}
-\CommentTok{#>        lq     mean   median       uq      max neval}
-\CommentTok{#>  61.23579 72.97175 64.44056 68.37965 156.5290    10}
-\CommentTok{#>  45.33201 47.71227 47.05405 50.12441  52.1516    10}
+\CommentTok{#>                       DelayedArray::colSums(sparse_matrix[i, j]) 46.43427}
+\CommentTok{#>  DelayedMatrixStats::colSums2(sparse_matrix, rows = i, cols = j) 43.84288}
+\CommentTok{#>        lq     mean   median       uq       max neval}
+\CommentTok{#>  58.80461 69.18963 64.13646 67.67738 131.87153    10}
+\CommentTok{#>  45.14225 47.68512 47.19202 50.18447  52.70835    10}
 \NormalTok{i <-}\StringTok{ }\KeywordTok{sample}\NormalTok{(}\KeywordTok{nrow}\NormalTok{(rle_matrix), }\KeywordTok{nrow}\NormalTok{(rle_matrix) }\OperatorTok{/}\StringTok{ }\DecValTok{10}\NormalTok{)}
 \NormalTok{j <-}\StringTok{ }\KeywordTok{sample}\NormalTok{(}\KeywordTok{ncol}\NormalTok{(rle_matrix), }\KeywordTok{ncol}\NormalTok{(rle_matrix) }\OperatorTok{/}\StringTok{ }\DecValTok{2}\NormalTok{)}
 \KeywordTok{microbenchmark}\NormalTok{(DelayedArray}\OperatorTok{::}\KeywordTok{colSums}\NormalTok{(rle_matrix[i, j]),}
@@ -666,11 +669,11 @@ subsetting}\label{with-row-and-column-subsetting}
                \DataTypeTok{times =}\NormalTok{ times)}
 \CommentTok{#> Unit: milliseconds}
 \CommentTok{#>                                                          expr       min}
-\CommentTok{#>                       DelayedArray::colSums(rle_matrix[i, j])  144.6618}
-\CommentTok{#>  DelayedMatrixStats::colSums2(rle_matrix, rows = i, cols = j) 1227.4698}
-\CommentTok{#>         lq      mean   median       uq       max neval}
-\CommentTok{#>   146.4575  150.6922  147.420  148.844  179.0782    10}
-\CommentTok{#>  1245.4921 1263.5119 1253.124 1269.115 1353.0914    10}
+\CommentTok{#>                       DelayedArray::colSums(rle_matrix[i, j])   74.0634}
+\CommentTok{#>  DelayedMatrixStats::colSums2(rle_matrix, rows = i, cols = j) 1258.5250}
+\CommentTok{#>          lq      mean     median        uq       max neval}
+\CommentTok{#>    80.39394  103.6879   96.71862  117.3074  153.2567    10}
+\CommentTok{#>  1278.73703 1582.9624 1391.34098 1916.1114 2196.0357    10}
 \end{Highlighting}
 \end{Shaded}
 
@@ -683,31 +686,31 @@ subsetting}\label{with-row-and-column-subsetting}
                \DataTypeTok{times =}\NormalTok{ times)}
 \CommentTok{#> Unit: milliseconds}
 \CommentTok{#>                                          expr       min        lq}
-\CommentTok{#>         DelayedArray::colSums(dense_matrix^2) 1326.8490 1431.4468}
-\CommentTok{#>  DelayedMatrixStats::colSums2(dense_matrix^2)  246.0587  266.2838}
-\CommentTok{#>       mean    median       uq       max neval}
-\CommentTok{#>  1484.4255 1496.4808 1545.328 1591.2768    10}
-\CommentTok{#>   302.2183  299.9772  310.943  413.7981    10}
+\CommentTok{#>         DelayedArray::colSums(dense_matrix^2) 1807.3580 1965.1023}
+\CommentTok{#>  DelayedMatrixStats::colSums2(dense_matrix^2)  351.0731  404.5719}
+\CommentTok{#>       mean    median        uq       max neval}
+\CommentTok{#>  2055.0077 2003.8251 2178.5791 2290.5040    10}
+\CommentTok{#>   519.8276  507.9676  582.1483  864.0489    10}
 \KeywordTok{microbenchmark}\NormalTok{(DelayedArray}\OperatorTok{::}\KeywordTok{colSums}\NormalTok{(sparse_matrix }\OperatorTok{^}\StringTok{ }\DecValTok{2}\NormalTok{),}
 \NormalTok{               DelayedMatrixStats}\OperatorTok{::}\KeywordTok{colSums2}\NormalTok{(sparse_matrix }\OperatorTok{^}\StringTok{ }\DecValTok{2}\NormalTok{),}
                \DataTypeTok{times =}\NormalTok{ times)}
 \CommentTok{#> Unit: milliseconds}
-\CommentTok{#>                                           expr       min        lq}
-\CommentTok{#>         DelayedArray::colSums(sparse_matrix^2) 1368.0792 1402.4556}
-\CommentTok{#>  DelayedMatrixStats::colSums2(sparse_matrix^2)  531.5231  567.5002}
-\CommentTok{#>       mean    median        uq       max neval}
-\CommentTok{#>  1486.7550 1466.0952 1545.2155 1652.8075    10}
-\CommentTok{#>   582.7944  587.3182  602.8364  621.8481    10}
+\CommentTok{#>                                           expr      min       lq     mean}
+\CommentTok{#>         DelayedArray::colSums(sparse_matrix^2) 1829.675 1922.903 2159.961}
+\CommentTok{#>  DelayedMatrixStats::colSums2(sparse_matrix^2)  682.596  727.075  796.014}
+\CommentTok{#>     median        uq       max neval}
+\CommentTok{#>  2099.8463 2200.3313 2890.7803    10}
+\CommentTok{#>   792.6587  851.5654  989.4052    10}
 \KeywordTok{microbenchmark}\NormalTok{(DelayedArray}\OperatorTok{::}\KeywordTok{colSums}\NormalTok{(rle_matrix }\OperatorTok{^}\StringTok{ }\DecValTok{2}\NormalTok{),}
 \NormalTok{               DelayedMatrixStats}\OperatorTok{::}\KeywordTok{colSums2}\NormalTok{(rle_matrix }\OperatorTok{^}\StringTok{ }\DecValTok{2}\NormalTok{),}
                \DataTypeTok{times =}\NormalTok{ times)}
 \CommentTok{#> Unit: seconds}
 \CommentTok{#>                                        expr      min       lq     mean}
-\CommentTok{#>         DelayedArray::colSums(rle_matrix^2) 2.617288 2.673016 2.765875}
-\CommentTok{#>  DelayedMatrixStats::colSums2(rle_matrix^2) 2.330117 2.380350 2.441969}
+\CommentTok{#>         DelayedArray::colSums(rle_matrix^2) 1.621425 1.658672 1.735662}
+\CommentTok{#>  DelayedMatrixStats::colSums2(rle_matrix^2) 1.303282 1.369719 1.460526}
 \CommentTok{#>    median       uq      max neval}
-\CommentTok{#>  2.715906 2.887769 2.987700    10}
-\CommentTok{#>  2.418112 2.530877 2.547293    10}
+\CommentTok{#>  1.720114 1.768661 2.009433    10}
+\CommentTok{#>  1.433386 1.553991 1.632721    10}
 \end{Highlighting}
 \end{Shaded}
 
