--- a/02_colSums2.Rmd
+++ b/02_colSums2.Rmd
@@ -2,25 +2,28 @@
 
 We compare the `DelayedArray::colSums()` method, which uses the 
 block-processing algorithm, to the `DelayedMatrixStats::colSums2()` method, 
-which uses tailored algorithms depending on the *seed* of the *DelayedMatrix* 
-and to the `DelayedMatrixStats:::.colSums2()` method that acts directly on the 
-seed of the *DelayedMatrix* object[^dotted_method]
+which uses tailored algorithms depending on the *seed* of the *DelayedMatrix*,
+as well as comparing to the `colSums2()` method that acts directly on the seed 
+of the *DelayedMatrix* object[^seed_method]
 
-[^dotted_method]: `DelayedMatrixStats:::.colSums2()` shouldn't be called by the user because it does not realise delayed operations. It is used here for demonstration purposes on a "*pristine*" DelayedMatrix to measure the additional overhead of S4 methods
+[^seed_method]: The 'seed method' shouldn't be called by the user because it 
+does not realise delayed operations. It is used here for demonstration purposes 
+on a "*pristine*" DelayedMatrix to measure the additional overhead of S4 methods
 
 ## Pristine *DelayedMatrix*
 
 ```{r colSums2}
 microbenchmark(DelayedArray::colSums(dense_matrix),
                DelayedMatrixStats::colSums2(dense_matrix),
-               DelayedMatrixStats:::.colSums2(seed(dense_matrix)),
+               DelayedMatrixStats::colSums2(seed(dense_matrix)),
+               matrixStats::colSums2(seed(dense_matrix)),
                times = times)
 total(profmem(DelayedArray::colSums(dense_matrix)))
 total(profmem(DelayedMatrixStats::colSums2(dense_matrix)))
 
 microbenchmark(DelayedArray::colSums(sparse_matrix),
                DelayedMatrixStats::colSums2(sparse_matrix),
-               DelayedMatrixStats:::.colSums2(seed(sparse_matrix)),
+               DelayedMatrixStats::colSums2(seed(sparse_matrix)),
                Matrix::colSums(seed(sparse_matrix)), 
                times = times)
 total(profmem(DelayedArray::colSums(sparse_matrix)))
@@ -28,7 +31,7 @@ total(profmem(DelayedMatrixStats::colSums2(sparse_matrix)))
 
 microbenchmark(DelayedArray::colSums(rle_matrix),
                DelayedMatrixStats::colSums2(rle_matrix),
-               DelayedMatrixStats:::.colSums2(seed(rle_matrix)), 
+               DelayedMatrixStats::colSums2(seed(rle_matrix)), 
                times = times)
 
 total(profmem(DelayedArray::colSums(rle_matrix)))
